# libVES.c

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Makefile.am  Makefile.in  Makefile.win  NEWS  NOTICE  README  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  configure.bat  libVES.pc.in
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
doc/: VESrecovery.md  org-key-custody.md
lib/: Android.mk  Makefile.am  Makefile.in  VESflow.c  VESflow.h  VESlocker.c  VESlocker.h  jVar.c  jVar.h  libVES.c  libVES.h
lib/KeyStore/: keydir.c  keydir.h
lib/KeyStore/cli/: KeyStore_cli.c  KeyStore_cli_locale.c  KeyStore_cli_locale.h  Makefile
lib/libVES/: CiAlgo_AES.c  CiAlgo_AES.h  Cipher.c  Cipher.h  Event.c  Event.h  File.c  File.h  Flow.c  Flow.h  KeyAlgo_EVP.c  KeyAlgo_EVP.h  KeyAlgo_OQS.c  KeyAlgo_OQS.h  KeyStore.c  KeyStore.h  List.c  List.h  REST.c  REST.h  Ref.c  Ref.h  Session.c  Session.h  User.c  User.h  Util.c  Util.h  VaultItem.c  VaultItem.h  VaultKey.c  VaultKey.h  Watch.c  Watch.h
src/: Makefile.am  Makefile.in  config.h.in  ves-util.c  ves-util.h  ves.1
src/ves-util/: ci.c  ci.h  get.c  get.h  help.c  help.h  hook.c  hook.h  keystore_flags.c  keystore_flags.h  out.c  out.h  put.c  put.h  set.c  set.h  tty.c  tty.h  tty_u.c  tty_w.c
tests/: 01-item  02-share  03-anonymous  04-domain  05-keyalgo  06-mlkem-formats  test_invariant_VESflow.c  vestest.conf  vestest.inc.sh
